管理機能導入完了

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,5 @@
+<div class="main-container" >
+<%= render "/shared/header" %>
 <div class="product-main">
 <h1>
   お悩みの症状は?
@@ -26,4 +28,5 @@
   <br>
   <%= f.submit '検索' %>
 <% end %>
+</div>
 </div>
