問い合わせページ完了

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,6 +17,6 @@
   <li> <%= link_to 'ホーム', root_path, class: "header_menu_container_menu-home" %> </li>
   <li> <%= link_to 'Medical Helperについて', "#", class: "header_menu_container_menu-about" %> </li>
   <li> <%= link_to 'お薬手帳', "#", class: "header_menu_container_menu-privacy" %> </li>
-  <li> <%= link_to 'お問い合わせ', "#", class: "header_menu_container_menu-contact" %> </li>
+  <li> <%= link_to 'お問い合わせ', contacts_new_path, class: "header_menu_container_menu-contact" %> </li>
 </ul>
 
