--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="nav">
 <div class="lists-left">
 <%= link_to 'Medical Helper', root_path, class: "header-link" %>
-<p>時間のない方に、症状別に検索することができます。</p>
+<p>時間のない方に、症状別にお薬を検索することができます。</p>
 </div>
     <ul class='lists-right'>
      <% if user_signed_in? %>
@@ -16,7 +16,7 @@
 <ul class="header_menu_container_menu-list">
   <li> <%= link_to 'ホーム', root_path, class: "header_menu_container_menu-home" %> </li>
   <li> <%= link_to 'Medical Helperについて', "#", class: "header_menu_container_menu-about" %> </li>
-  <li> <%= link_to 'お薬手帳', "#", class: "header_menu_container_menu-privacy" %> </li>
+  <li> <%= link_to 'お薬手帳',  messages_index_path, class: "header_menu_container_menu-privacy" %> </li>
   <li> <%= link_to 'お問い合わせ', contacts_new_path, class: "header_menu_container_menu-contact" %> </li>
 </ul>
 
