ビデオ機能終了

--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -18,5 +18,6 @@
 <% end %>
 <br>
 <%= link_to 'つぶやき相談',  new_tweet_path %>
+<%= link_to 'ビデオ相談',  rooms_show_path %>
 <%= link_to 'トップページへ戻る', root_path %>
 </div>
