プレビュー完了

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -21,7 +21,7 @@
 .header_menu_container_menu-list {
   display: flex;
   justify-content: space-around;
-  background-color:#009bc6;
+  background-color:#A1E6A1;
   list-style: none;
   height: 50px;
   align-items: center;
