--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -27,7 +27,10 @@ Medical Helperはお薬を症状や眠気の有無、価格帯から素早く調
 使い方
 </h2>
 <p>
-症状、眠気の有無、価格帯から選択。検索ボタンをクリックすると、あなたの症状似合った薬が表示されます。検索結果の画面から購入サイトに遷移できます。また、近隣薬局を表示してくれます。会員登録されていれば、ビデオチャットで相談することも可能です。
+症状、眠気の有無、価格帯から選択。検索ボタンをクリックすると、あなたの症状似合った薬が表示されます。検索結果の画面から購入サイトに遷移できます。また、近隣薬局を表示してくれます。
+</p>
+<p>
+会員登録されていれば、お薬手帳管理・ビデオ相談・つぶやき相談を利用できます.
 </p>
 <h2 class="message__container__h2">
 免責事項
