--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,12 @@
 <div class="main-container" >
 <%= render "/shared/header" %>
 <div class="product-main">
-<h1>
+<h1 class="products__container__h2">
   お悩みの症状は?
 </h1>
 <%= search_form_for @p, url: products_search_path do |f| %>
   <%= f.label :status_eq, '症状' %>
-  <%= f.collection_select :status_eq, @product_status, :status, :status,  include_blank: '指定なし' %>
+  <%= f.collection_select :status_eq, @product_status, :status, :status,  include_blank: '指定なし',  prompt: "何でお悩み？", class: "status_select" %>
   <br>
    <%= f.label :sleep, '眠くなる成分：' %>
   <%= f.radio_button :sleep_lteq, '' %>
@@ -26,7 +26,7 @@
   <%= f.radio_button :price_lteq, '5000' %>
   5000円以下
   <br>
-  <%= f.submit '検索' %>
+  <%= f.submit '検索', class: "product_btn" %>
 <% end %>
 </div>
 </div>
