--- a/app/assets/stylesheets/messages/form.css
+++ b/app/assets/stylesheets/messages/form.css
@@ -1,25 +1,4 @@
-.search-main{
-  text-align: center;
-}
-
-.search-main {
-  width: 750px;
-  margin: 40px auto 40px;
-}
-
-.search__container__h2 {
-  font-size: 25px;
-  font-weight: 500;
-  background: #f7f7f7;
-  padding: 20px 15px 18px;
-  color: #333;
-  border: 9px solid #7fd9d2;
-  line-height: 40px;
-  margin: 60px 0 40px 0;
-  text-decoration: none;
-}
-
-.search_btn {
+.messages_btn {
   display       : inline-block;
   border-radius : 5%;          /* 角丸       */
   font-size     : 10pt;        /* 文字サイズ */
@@ -32,10 +11,9 @@
   transition    : .3s;         /* なめらか変化 */
   box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
   border        : 2px solid #A1E6A1;    /* 枠の指定 */
-  text-decoration: none;
 }
 
-.search_btn:hover {
+.messages_btn:hover {
   box-shadow    : none;        /* カーソル時の影消去 */
   color         : #A1E6A1;     /* 背景色     */
   background    : #ffffff;     /* 文字色     */
