--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: @message, id: 'new_message', local: true do |f| %>
-  <%= f.text_field :content, placeholder: 'type a message' %>
-  <%= f.file_field :images, name: 'message[images][]', id: 'message_image' %>
-  <%= f.submit '送信' %>
+  <%= f.text_field :content, placeholder: 'メッセージを入力' %>
+  <%= f.file_field :images, name: 'message[images][]', id: 'message_image', class: "messages_btn" %>
+  <%= f.submit '送信', class: "messages_btn" %>
   <div id="image-list"></div>
 <% end %>
 
