--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,7 @@
 <%= render "/shared/header" %>
-<h3>トップページ</h3>
-<h3><%= link_to '新規投稿', new_message_path%></h3>
+<div class="message_main">
+<h3 class="messages_index">お薬の内容を画像として管理できます</h3>
+<h3><%= link_to '新しいお薬を記録', new_message_path%></h3>
 <% @messages.each do |message| %>
   <%= message.content%>
   <div class="messages">
@@ -9,3 +10,4 @@
     <% end %>
   </div>
 <% end %>
+</div>
