--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -75,3 +75,17 @@
 .footer_container_copyright {
   color: #ffffff;
 }
+
+ /* タブレット表示時 */
+ @media (max-width: 1024px) {
+ .header_menu_container_menu-list {
+  width: 90%;
+ }
+}
+
+/* スマホ表示時 */
+@media (max-width: 599px) {
+.header_menu_container_menu-list {
+  font-size: 15px;
+ }
+}
